--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "vite-project",
+  "name": "ts-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2",
-    "vite": "^4.3.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2",
+    "vue-tsc": "^1.4.2"
   }
- 
 }
